raneys: start work on pf char'ing unif rand perms.

--- a/raneys_lemmas/raneys_lemmas.bib
+++ b/raneys_lemmas/raneys_lemmas.bib
@@ -15,3 +15,10 @@
   year      = 1998
 }
 
+@misc{s-j-t-alg,
+  author    = "Wikipedia",
+  title     = "Steinhaus-Johnson-Trotter algorithm --- {W}ikipedia{,} The Free Encyclopedia",
+  year      = 2015,
+  url       = "http://en.wikipedia.org/wiki/Steinhaus-Johnson-Trotter_algorithm",
+  note      = "[Online; accessed 6-June-2015]"
+}
