self_repl: Finish vectorizing current images.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -149,12 +149,19 @@ The normal curve is described by \(y = e^{-x^2/2}\).
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/normal@2x.png}
-\caption{\(y=e^{-x^2/2}\)}
+\includegraphics{images/pdfs/normal3.pdf}
+\caption{The normal curve: \(y=e^{-x^2/2}\).}
 \end{figure}
 
 \section{\texorpdfstring{Leaf-point distributions of
 \emph{L}-systems}{Leaf-point distributions of L-systems}}\label{leaf-point-distributions-of-l-systems}
+
+\section{Fractal functions}\label{fractal-functions}
+
+This section is for functions similar to the Cantor diagonal. It may
+turn out that I can't find any functions that fit here, or that the
+\emph{L}-systems distributions includes this case, or even that I can
+prove that no functions could exist here (as far as I know).
 
 \section{Temporary example content}\label{temporary-example-content}
 
