self_repl: Make 1st fn addition image.
This includes added support for SVG-based coloring in of the area under a
function.

I'm not happy with the current colors used. Also, ideally, it would be easy to
change these colors, but for now it's a bit more work as there is a light
version for the fill and a dark version for the stroke; both are currently
hard-coded values.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -159,8 +159,8 @@ and each \(g_i\) has
 
 \[ \lim_{x\to\pm\infty}\frac{g_i(x)}{f(x)} = 1,\]
 
-which is good enough for me to somewhat subjectively say that they
-strongly resemble shifts of \(f\).
+which is good enough for me to subjectively say that they strongly
+resemble shifts of \(f\).
 
 However, the original motivation for self-replicating functions is based
 on distribution functions, so the rest of this note focuses on functions
@@ -189,7 +189,12 @@ Then
 
 \[f_{[0,1)} = g_{[0,1/2)} + g_{[1/2,1)}.\]
 
-TODO Add an image here giving a graphical equation.
+\begin{figure}[htbp]
+\centering
+\includegraphics{images/pdfs/added_intervals.pdf}
+\caption{Visual representation of the addition \(g_1 + g_2 = f\) for the
+indicator functions of intervals.}
+\end{figure}
 
 We can consider the above \(g-\)functions as horizontally scaled
 versions of the original. It's not clear that they're ``shifts,'' but
