self_repl: Clean up the indicator fn text, image.

--- a/self_repl_fns/self_repl_fns.bib
+++ b/self_repl_fns/self_repl_fns.bib
@@ -13,7 +13,17 @@
   author    = {Knuth, Donald E. and Patashnik, Oren and Graham, Ronald L.},
   title     = {Concrete mathematics: a foundation for computer science},
   chapter   = 7,
-  publisher = Addison-Wesley,
+  publisher = {Addison-Wesley},
+  year      = 1998
+}
+
+@book{taocp1,
+  author    = {Knuth, Donald E.},
+  title     = {Fundamental Algorithms},
+  series    = {The Art of Computer Programming},
+  publisher = {Addison-Wesley},
+  volume    = 1,
+  edition   = "Third",
   year      = 1998
 }
 
