self_repl: Update pdf version of an image.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -173,33 +173,32 @@ is intended to defeat this trivial case. That is, each \(g_i\) is
 expected to be similar to a translation of \(f\), such as \(f(x-1)\) or
 \(f(x+1)\).
 
-TODO In the paragraph below, add citation of proper reference for the
-\([P(x)]\) notation.
+The next function I'll describe is simple and meets all of the
+requirements so far. An \emph{indicator function} is a function taking
+on only the value 0 or 1; it's also sometimes referred to as a
+\emph{characteristic function}. If \(f\) is an indicator function, then
+you can think of those \(x\) with \(f(x) = 1\) as belonging to the
+subset of the domain which is \emph{indicated} by the function. It's
+handy to use the following bracket notation of Knuth and others: given
+any boolean predicate \(P(x)\), let \([P(x)]\) denote the value 1 when
+\(P(x)\) is true, and false otherwise (Knuth 1998).
 
-A very simple function that meets all our requirements so far is the
-indicator function of an interval. Given a boolean property \(P(x)\) of
-\(x\), I'll use Knuth's notation \([P(x)]\) to denote the
-\(\{0,1\}-\)valued function of \(x\) with value 1 iff \(P(x)\) is true.
-Using this, we can denote a function with value 1 on half-open interval
-\([a,b)\), and 0 elsewhere, as
-
-\[f_{[a, b)}(x) = \big[x\in[a, b)\big].\]
-
-Then
-
-\[f_{[0,1)} = g_{[0,1/2)} + g_{[1/2,1)}.\]
+Given a half-open interval \([a, b)\), define \(I_{[a, b)}\) to be the
+function \([x\in[a, b)]\). The following equation shows how such
+indicator functions can be considered simple self-replicating functions:
+\(I_{[0, 2)} = I_{[0, 1)} + I_{[1, 2)}\).
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/pdfs/added_intervals2.pdf}
-\caption{Visual representation of the addition \(g_1 + g_2 = f\) for the
-indicator functions of intervals.}
+\includegraphics{images/pdfs/added_intervals3.pdf}
+\caption{Visual representation of the addition of indicator functions of
+intervals.}
 \end{figure}
 
-We can consider the above \(g-\)functions as horizontally scaled
-versions of the original. It's not clear that they're ``shifts,'' but
-this kind of flexibility is the reason the definition of a
-self-replicating function is informal.
+One can consider the addends above as horizontally scaled versions of
+their sum. It's not clear that they're ``shifts,'' but this kind of
+flexibility is the reason the definition of a self-replicating function
+is informal.
 
 \section{The normal curve}\label{the-normal-curve}
 
@@ -232,7 +231,7 @@ Content
 
 See my notes on Raney's lemmas for more examples.
 
-Here is a reference (Knuth, Patashnik, and Graham 1998).
+Here is a reference (Knuth, Patashnik, and Graham 1997).
 
 \section{Questions}\label{questions}
 
@@ -253,8 +252,11 @@ Here is a reference (Knuth, Patashnik, and Graham 1998).
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
 
-Knuth, Donald E., Oren Patashnik, and Ronald L. Graham. 1998.
+Knuth, Donald E. 1998. \emph{Fundamental Algorithms}. Third. Vol. 1. The
+Art of Computer Programming. Addison-Wesley.
+
+Knuth, Donald E., Oren Patashnik, and Ronald L. Graham. 1997.
 \emph{Concrete Mathematics: A Foundation for Computer Science}.
-addison-wesley.
+Addison-Wesley.
 
 \end{document}
